--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "^12.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@storyblok/storyblok-editable": "^1.0.0",
+    "emailjs-com": "^3.2.0",
+    "next": "^12.0.1",
+    "nextjs-progressbar": "^0.0.13",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-scroll-parallax": "^2.4.1",
+    "react-select": "^5.2.1",
+    "react-spring": "^9.3.2",
+    "sass": "^1.43.4",
+    "storyblok-js-client": "^4.1.5",
+    "swiper": "^7.3.1"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0"
